Changed some copy

--- a/templates/trivia/home.html
+++ b/templates/trivia/home.html
@@ -47,7 +47,7 @@
                     </div>
                     </form>
                 {% empty %}
-                    <p class="text-sm text-gray-500">No trivia questions yet</p>
+                    <p class="text-sm text-gray-500">No trivia questions currently available</p>
                 {% endfor %}
             </div>
         </div>
