--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -129,7 +129,7 @@
                                   </button>
                                 </div>
                         </form>
-                        
+                        <a href="{% url 'invite' %}"><small>Bulk Invite</small></a>
                     </div>
                 </div>
                 <div class="mt-8 flex flex-col">
