--- a/templates/_base.html
+++ b/templates/_base.html
@@ -99,6 +99,31 @@
                 {% endif %}
             </div>
         </nav>
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.level == DEFAULT_MESSAGE_LEVELS.SUCCESS %}
+                    <div id="alert-{{forloop.counter}}" class="flex items-center gap-x-6 bg-green-600 px-6 py-2.5 sm:px-3.5 sm:before:flex-1">
+                {% elif message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
+                    <div id="alert-{{forloop.counter}}" class="flex items-center gap-x-6 bg-red-600 px-6 py-2.5 sm:px-3.5 sm:before:flex-1">
+                {% elif message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
+                    <div id="alert-{{forloop.counter}}" class="flex items-center gap-x-6 bg-indigo-600 px-6 py-2.5 sm:px-3.5 sm:before:flex-1">
+                {% elif message.level == DEFAULT_MESSAGE_LEVELS.WARNING %}
+                    <div id="alert-{{forloop.counter}}" class="flex items-center gap-x-6 bg-yellow-600 px-6 py-2.5 sm:px-3.5 sm:before:flex-1">
+                {%endif%}
+                <p class="text-sm leading-6 text-white">
+                    {{message}}
+                </p>
+                    <div class="flex flex-1 justify-end">
+                    <button type="button" class="-m-3 p-3 focus-visible:outline-offset-[-4px]" data-dismiss-target="#alert-{{forloop.counter}}" aria-label="Close">
+                        <span class="sr-only">Dismiss</span>
+                        <svg class="h-5 w-5 text-white" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                        <path d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z" />
+                        </svg>
+                    </button>
+                    </div>
+                </div>
+            {% endfor %}
+          {% endif %}
     </header>
 </main>
 
