--- a/templates/email/bulk_invite_success.html
+++ b/templates/email/bulk_invite_success.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="color-scheme" content="light dark"/>
     <meta name="supported-color-schemes" content="light dark"/>
-    <title>Team Bio Invite</title>
+    <title>Team Bio Bulk Invite Success</title>
     <style type="text/css" rel="stylesheet" media="all">
         /* Base ------------------------------ */
 
@@ -452,7 +452,7 @@
     <![endif]-->
 </head>
 <body>
-<span class="preheader">{{ invite_sender_name }} with {{ invite_sender_organization_name }} has invited you to use Team Bio to collaborate with them.</span>
+<span class="preheader">Team Bio Bulk Invite Success</span>
 <table class="email-wrapper" width="100%" cellpadding="0" cellspacing="0" role="presentation">
     <tr>
         <td align="center">
@@ -473,35 +473,10 @@
                                 <td class="content-cell">
                                     <div class="f-fallback">
                                         <h1>Howdy,</h1>
-                                        <p>{{ invite_sender_name }} from {{ invite_sender_organization_name }} has invited you to use Team Bio. Use the button below to set up your account.</p>
-                                        <!-- Action -->
-                                        <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
-                                            <tr>
-                                                <td align="center">
-                                                    <!-- Border based button
-                                 https://litmus.com/blog/a-guide-to-bulletproof-buttons-in-email-design -->
-                                                    <table width="100%" border="0" cellspacing="0" cellpadding="0" role="presentation">
-                                                        <tr>
-                                                            <td align="center">
-                                                                <a href="{{ action_url }}" class="f-fallback button" target="_blank">Set up account</a>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                        <p>Welcome aboard,
+                                        <p>Your recent bulk invite request has completed successfully.</p>
+                                        <p>Cheers,
                                             <br>The Team Bio team</p>
-                                        <p><strong>P.S.</strong> Need help getting started? Either reply to this email, or reach out to our fantastic support at support@team.bio</p>
-                                        <!-- Sub copy -->
-                                        <table class="body-sub" role="presentation">
-                                            <tr>
-                                                <td>
-                                                    <p class="f-fallback sub">If you’re having trouble with the button above, copy and paste the URL below into your web browser.</p>
-                                                    <p class="f-fallback sub">{{ action_url }}</p>
-                                                </td>
-                                            </tr>
-                                        </table>
+                                        <p><strong>P.S.</strong> Need help? Either reply to this email, or reach out to our fantastic support at support@team.bio</p>
                                     </div>
                                 </td>
                             </tr>
