--- a/templates/email/invite.html
+++ b/templates/email/invite.html
@@ -472,7 +472,13 @@
                             <tr>
                                 <td class="content-cell">
                                     <div class="f-fallback">
+                                        {% if recipient_name %}
+                                        <h1>Howdy {{recipient_name }},</h1>
+                                        {% elif recipient_email %}
+                                        <h1>Howdy {{recipient_email }},</h1>
+                                        {% else %}
                                         <h1>Howdy,</h1>
+                                        {% endif %}
                                         <p>{{ invite_sender_name }} from {{ invite_sender_organization_name }} has invited you to use Team Bio. Use the button below to set up your account.</p>
                                         <!-- Action -->
                                         <table class="body-action" align="center" width="100%" cellpadding="0" cellspacing="0" role="presentation">
