Bulk Company Invite (#404)
* Working on bulk invites

* Moved to constants for field classes

* Added a downloadable file to contain templates

* Bulk Invite Creation

* Completed bulk_invite_processing

* Filter caps insensitive

* Added a check for if the bulk invite request has been processed or not

* Added recipient email and name to invite if it existis

* Make task

--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -129,7 +129,7 @@
                                   </button>
                                 </div>
                         </form>
-                        
+                        <a href="{% url 'bulk_invite' %}"><small>Bulk Invite</small></a>
                     </div>
                 </div>
                 <div class="mt-8 flex flex-col">
