Added invited users count

--- a/templates/companies/company_settings.html
+++ b/templates/companies/company_settings.html
@@ -110,7 +110,7 @@
                 <div class="sm:flex sm:items-center">
                     <div class="sm:flex-auto">
                         <h2 class="text-lg font-medium text-gray-900">Users</h2>
-                        <p class="mt-2 text-sm text-gray-700">You currently have {{ company_users.count }} users</p>
+                        <p class="mt-2 text-sm text-gray-700">You currently have {{ company_users.count }} users and {{ invited_users.count }} invited users.</p>
                     </div>
                     <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
                         <form method="post" action={% url 'invite' %}>
