Make pet type small

--- a/templates/companies/pets.html
+++ b/templates/companies/pets.html
@@ -23,7 +23,7 @@
                                         <div class="space-y-1 text-lg font-medium leading-6">
                                             <br>
                                             <h3>{{ pet.name }}</h3>
-                                            {% if pet.pet_type %}<p class="text-indigo-600">{{ pet.pet_type }}</p>{% endif %}
+                                            {% if pet.pet_type %}<small class="text-indigo-600">{{ pet.pet_type }}</small>{% endif %}
                                         </div>
                                     </a>
                                 </div>
