Pet lazy loading

--- a/templates/companies/pets.html
+++ b/templates/companies/pets.html
@@ -15,7 +15,7 @@
                         <li class="col-span-1 flex flex-col divide-y divide-gray-200 rounded-lg bg-white text-center shadow">
                             <div class="flex flex-1 flex-col p-8">
                                 <div class="aspect-w-4 aspect-h-3">
-                                    <img class="aspect-[3/2] w-full object-contain" src="{{ pet.picture_url }}" alt="">
+                                    <img class="aspect-[3/2] w-full object-contain" src="{{ pet.picture_url }}" loading="lazy" alt="">
                                 </div>
 
                                 <div class="space-y-2">
