--- a/templates/companies/edit_profile.html
+++ b/templates/companies/edit_profile.html
@@ -56,6 +56,9 @@
                             {{ form.personality_type }}
                             <small>If you are unsure about which personality type you are, find out <a href="https://www.16personalities.com/free-personality-test">here</a></small>
                             <br>
+                            <label for="day_or_night" class="block text-xs font-medium text-gray-900 pt-3">Early Bird or Night Owl</label>
+                            {{ form.day_or_night}}
+                            <br>
                             <label for="chinese_zodiac" class="block text-xs font-medium text-gray-900 pt-3">Chinese Zodiac</label>
                             {{ form.chinese_zodiac }}
                             <small>Find out your chinese zodiac <a href="https://www.travelchinaguide.com/intro/social_customs/zodiac/">here</a></small>
