--- a/templates/pages/faq.html
+++ b/templates/pages/faq.html
@@ -53,6 +53,15 @@
                         Yes, we offer a very generous {{ default_trial_days }} day free trial that allows you to explore the platform and its features without any commitment.
                     </dd>
                 </div>
+
+                <div class="relative">
+                    <dt>
+                        <p class="text-lg leading-6 font-medium text-gray-900">What features are you planning to add?</p>
+                    </dt>
+                    <dd class="mt-2 text-base text-gray-500">
+                        We are constantly adding new features to the platform. If you have any suggestions, please let us know. You can also take a look at <a href="https://github.com/users/aaronspindler/projects/2" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-500 underline">our roadmap</a> to see what we are working on.
+                    </dd>
+                </div>
             </dl>
         </div>
     </div>
